[package]
name = "docker-io-reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.2"
clap = { version = "4.5.42", features = ["derive", "env"] }
eyre = "0.6.12"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
